--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-intl": "2.7.2",
         "redux-saga": "^0.16.0",
         "solarlunar": "2.0.7",
+        "sortablejs": "^1.13.0",
         "valid-url": "^1.0.9",
         "wangeditor": "^3.1.1",
         "warning": "^3.0.0"
