--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "rc-color-picker": "1.2.6",
         "react-cropper": "1.0.1",
         "react-intl": "2.7.2",
+        "react-virtualized": "^9.22.3",
         "redux-saga": "^0.16.0",
         "solarlunar": "2.0.7",
         "sortablejs": "^1.13.0",
