--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,12 @@
 {
-    "compilerOptions": {
-        "baseUrl": "src",
-        "jsx": "react"
-    },
-    "exclude": [
-        "node_modules",
-        "lib"
-    ]
+  "compilerOptions": {
+    "baseUrl": "src",
+    "jsx": "react",
+    "experimentalDecorators": true,
+    "allowJs": true
+  },
+  "exclude": [
+    "node_modules",
+    "lib"
+  ]
 }
