--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hualala/frontend-shell": "1.5.15",
     "@hualala/platform-base": "5.0.9",
     "@hualala/react-lazyload": "^2.3.0",
+    "@hualala/sc-goodsRef": "^0.2.32",
     "common-bin": "^2.9.0",
     "copy-to-clipboard": "^3.3.1",
     "memoize-one": "^5.0.0",
