--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@hualala/frontend-shell": "1.5.15",
     "@hualala/platform-base": "5.0.9",
     "@hualala/react-lazyload": "^2.3.0",
-    "@hualala/sc-goodsRef": "^0.2.32",
+    "@hualala/sc-goodsRef": "^0.3.6",
     "common-bin": "^2.9.0",
     "copy-to-clipboard": "^3.3.1",
+    "js-export-excel": "^1.1.4",
     "memoize-one": "^5.0.0",
     "qrcode.react": "0.9.3",
     "rc-calendar": "9.15.5",
